# data_eating_interfaces

./: .gitignore  README.md  pyproject.toml  setup.py
data_eating_interfaces/: IModel.py  IRepository.py  IResourceRepository.py  __init__.py
data_eating_interfaces/Models/: IResource.py
data_eating_interfaces/Repositories/: IResourceRepository.py
tests/: test_resource_repository.py
tests/Mocks/: mock_resource.py  mock_resource_repository.py
