[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data_eating_interfaces"
version = "0.1.0"
description = "A data eating interfaces package"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "Danilo Silva", email = "contact@danilocgsilva.me"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/danilocgsilva/data_eating_interfaces"